# self-evolving-agent

./: .gitignore  README.md  _test_all.py  agent.py  context_compressor.py  pyproject.toml  watchdog.py
.trae/specs/self-evolving-agent/: checklist.md  spec.md  tasks.md
core/: __init__.py  file_tools.py  git_tools.py  inbox_listener.py  registry.py  shell_tools.py  web_tools.py
llm/: __init__.py  client.py
memory/: system.md
